# DRASystem

./: .flake8  .gitignore  README.md  apicalls.py  apireturns.txt  app.py  automation.py  config.py  cron_log.txt  cronjob.txt  diagnostics.txt  fullprocess.py  fullprocess.sh  pyproject.toml
production_deployment/: dependencyreport.txt  ingestedfiles.txt
src/: config.py  ingestion.py
steps/: deployment.py  diagnostics.py  ingestion.py  reporting.py  scoring.py  training.py
