[tool.poetry]
name = "drasystem"
version = "0.1.0"
description = ""
authors = ["dbaeza <daniil_iisus@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pre-commit = "^3.6.0"
detect-secrets = "^1.4.0"
autopep8 = "2.0.4"
flake8 = "^7.0.0"
pandas = "^2.2.1"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
